# ink-instanciate

./: Cargo.toml  package.json
contracts/dummy/: Cargo.toml  lib.rs
contracts/parent/: Cargo.toml  lib.rs
scripts/: deploy.ts
tests/: instanciate.test.ts
