[package]
name = "dummy"
version = "0.1.0"
authors = ["Supercolony <pierre.ossun@supercolony.net>"]
edition = "2018"

[dependencies]
ink_primitives = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_metadata = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_storage = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_lang = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_prelude = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "dummy"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []